// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/ATTRIBUTE.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/UOCTET.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus140Parameter {
extensions 9 to 109;

  optional ccsds_mal.protobuf.UINTEGER parameterId = 1;
  optional ccsds_mal.protobuf.UINTEGER apid = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE currentValue = 3;
  optional pusGroundModel.protobuf.PusElement pusElement = 4;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeCurrentValue = 5;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeCurrentValue = 6;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeParamId = 7;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeParamId = 8;
}
